@@ -76,6 +76,16 @@ gsl_multifit_linear_svd (const gsl_matrix * X,
                          gsl_multifit_linear_workspace * work);
 
 int
+gsl_multifit_linear_usvd (const gsl_matrix * X,
+                          const gsl_vector * y,
+                          double tol,
+                          size_t * rank,
+                          gsl_vector * c,
+                          gsl_matrix * cov,
+                          double *chisq, 
+                          gsl_multifit_linear_workspace * work);
+
+int
 gsl_multifit_wlinear (const gsl_matrix * X,
                       const gsl_vector * w,
                       const gsl_vector * y,
@@ -94,6 +104,17 @@ gsl_multifit_wlinear_svd (const gsl_matrix * X,
                           gsl_matrix * cov,
                           double *chisq, 
                           gsl_multifit_linear_workspace * work);
+
+int
+gsl_multifit_wlinear_usvd (const gsl_matrix * X,
+                           const gsl_vector * w,
+                           const gsl_vector * y,
+                           double tol,
+                           size_t * rank,
+                           gsl_vector * c,
+                           gsl_matrix * cov,
+                           double *chisq, 
+                           gsl_multifit_linear_workspace * work);
 
 int
 gsl_multifit_linear_est (const gsl_vector * x,
