@@ -1,3 +1,9 @@
+2009-11-25  Brian Gough  <bjg@network-theory.co.uk>
+
+	* multilinear.c (gsl_multifit_linear_usvd)
+	(gsl_multifit_wlinear_usvd): provide an unscaled version of the
+	fits
+
 2009-07-09  Brian Gough  <bjg@network-theory.co.uk>
 
 	* work.c (gsl_multifit_linear_free): handle NULL argument in free
